fixed hover flickering issue

--- a/src/component/topnavbar/topnavbar.scss
+++ b/src/component/topnavbar/topnavbar.scss
@@ -74,7 +74,7 @@
                 border-radius: 20px;
                 padding: 12px 16px;
                 right: 30px;
-                top:65px;
+                top:54px;
                 z-index: 200;
                 overflow: auto;
                 display: none;
@@ -121,7 +121,7 @@
                 max-width: 30px;
                 &>.user-actions-content{
                     right: 5px;
-                    top:65px;
+                    top:54px;
                     z-index: 200;
                     overflow: auto;
                     display: none;
